# catchclaw

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_DE.md  README_EN.md  README_FR.md  README_JA.md  README_RU.md  SECURITY.md  scan_full.json  targets_full.txt
.audit/: v4-architecture-plan.md  v4-cve-research.md  v4-false-positive-audit.md  v4-source-audit.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
payloads/: injection.yaml  prompt_inject.yaml  ssrf.yaml
rust/: Cargo.toml
rust/src/: main.rs
rust/src/chain/: chains.rs  dag.rs
rust/src/config/: mod.rs
rust/src/exploit/: acp_bypass.rs  agent_file_inject.rs  agent_inject.rs  apikey_steal.rs  approval_hijack.rs  auth_disable_leak.rs  auth_mode_abuse.rs  base.rs  browser_request.rs  browser_upload_traversal.rs  bypass_soul.rs  c2_exfil.rs  channel_inject.rs  config_tamper.rs  cors_bypass.rs  cron_bypass.rs  csrf_no_origin.rs  eval_inject.rs  exec_race_toctou.rs  exec_socket_leak.rs  flood_guard_reset.rs  hidden_content.rs  hook_inject.rs  keychain_cmd_inject.rs  librechat_probe.rs  link_template_inject.rs  lobechat_probe.rs  log_disclosure.rs  marker_spoof.rs  mcp_inject.rs  memory_data_leak.rs  mod.rs  oauth_abuse.rs  oauth_token_theft.rs  obfuscation_bypass.rs  origin_wildcard.rs  pairing_brute.rs  patch_escape.rs  prompt_inject.rs  qmd_cmd_inject.rs  (+24 more)
rust/src/report/: mod.rs
rust/src/scan/: mod.rs
rust/src/utils/: http.rs  payload.rs  types.rs  ws.rs
scripts/: gen_assets.sh  gen_payloads.go
(+114 files in other folders)
