[package]
name = "catchclaw"
version = "5.0.0"
edition = "2024"
description = "Automated security assessment tool for OpenClaw / Open-WebUI AI coding platforms"
license-file = "../LICENSE"
repository = "https://github.com/Coff0xc/catchclaw"
homepage = "https://github.com/Coff0xc/catchclaw"
authors = ["Coff0xc"]
keywords = ["security", "pentest", "openclaw", "exploit", "assessment"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inventory = "0.3"
url = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
